# next-sample/backend/application/api/openapi.yaml
@@ -71,6 +71,36 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/RecipeList"
+  /recipe/search:
+    get:
+      summary: "レシピ検索"
+      operationId: getRecipeSearch
+      tags:
+        - recipe
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            default: 1
+        - name: q
+          in: query
+          required: true
+          schema:
+            type: string
+            description: 検索ワード
+            example: 検索ワード
+      responses:
+        "200":
+          description: "成功"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/RecipeList"
   /recipe/register:
     post:
       summary: "新規レシピ登録"
